--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "rmc-cli",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A CLI to remove comments in JS files",
   "main": "index.js",
-  "scripts": {},
   "keywords": [
     "CLI",
     "Remove comments",
@@ -18,7 +17,8 @@
     "inquirer": "^6.3.1",
     "is-valid-path": "^0.1.1",
     "mkdirp": "^0.5.1",
-    "strip-comments": "^1.0.2"
+    "strip-comments": "^1.0.2",
+    "update-notifier": "^3.0.1"
   },
   "bin": {
     "rmc": "./index.js"
